<resources>
    <string name="app_name">Interval Trainer</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_record_workout">Record Workout</string>
    <string name="title_settings">Settings</string>
    <string name="title_login">Log In</string>
    <string name="title_logout">Log Out</string>
    <string name="title_history">History</string>
    <string name="title_scanner">Bluetooth Scanner</string>
    <string name="title_set_up">Set Up</string>

    <string name="username">Username or Email</string>
    <string name="password">Enter Password</string>
    <string name="login">Log In</string>
    <string name="forgot_password">Forgot Password</string>

    <string name="intent_scheme">uasdkfmhyptbft7v6u4gfvzw53wdh8xa4fz6q</string>
    <string name="intent_host">mmf.oauth</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="resting_hr_text">Resting Heart Rate</string>
    <string name="dialog_description">Please provide your resting heart rate to generate accurate heart zones. If you do not know your resting heart, provide your fitness level</string>

    <string name="heart_rate_scanner_text">Heart Rate Monitor: </string>
    <string name="warm_up_interval_text">Warm Up Interval</string>
    <string name="high_intensity_interval_text">High Intensity Interval</string>
    <string name="low_intensity_interval_text">Low Intensity Interval</string>
    <string name="num_of_reps_text">Number of Reps</string>
    <string name="nagging_during_interval_text">Nagging Time During Zone</string>
    <string name="nagging_between_interval_text">Nagging Time Between Zone</string>
    <string name="high_intensity_hr_text">High Intensity HR Zone</string>
    <string name="low_intensity_hr_text">Low Intensity HR Zone</string>

    <string name="warm_up_interval_description">Amount of time you want to take to warm up.</string>
    <string name="high_intensity_interval_description">Amount of time you want to workout.</string>
    <string name="low_intensity_interval_description">Amount of time you want to rest.</string>
    <string name="num_of_reps_description">Amount of reps of work and rest you want to do.</string>
    <string name="nagging_during_interval_description">How much time you want to be nagged when you are expected to reach your heart rate zone.</string>
    <string name="nagging_between_interval_description">How much time you want to be nagged when you are not expected to reach your heart rate zone.</string>
    <string name="high_intensity_hr_description">The heart rate zone you want to attain when you workout.</string>
    <string name="low_intensity_hr_description">The heart rate zone you want to attain when you rest.</string>

    <string name="start_text">START</string>
    <string name="pause_text">PAUSE</string>
    <string name="finish_text">FINISH</string>

    <string name="submit_text">SUBMIT</string>
    <string name="cancel_text">CANCEL</string>

</resources>
