<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="24dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingBottom="14dp"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resting_hr_text"
        android:textColor="@color/dialogTitleColor"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/dialog_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_title"
        android:text="@string/dialog_description"
        android:textColor="@color/dialogDescriptionColor"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="18dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rest_hr_text"
        android:layout_below="@+id/dialog_description"
        android:textColor="@color/dialogSubtitleColor"
        android:text="Resting Heart Rate"
        android:textSize="13sp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resting_heart_rate"
        android:layout_below="@+id/rest_hr_text"
        android:textColor="@color/dialogEntryColor"
        android:gravity="center"
        android:layout_marginBottom="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fit_level"
        android:layout_below="@+id/resting_heart_rate"
        android:textColor="@color/dialogSubtitleColor"
        android:text="Fitness Level"
        android:textSize="13sp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp" />


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/health_spinner"
        android:layout_below="@+id/fit_level"
        android:gravity="center"
        android:layout_marginBottom="26dp"/>

    <TextView
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/health_spinner"
        android:textColor="@color/primaryColor"
        android:gravity="end"
        android:padding="10dp"
        android:text="@string/submit_text"
        android:textSize="15sp"
        android:textStyle="bold"/>

</RelativeLayout>